# hebbian_mamba

./: .gitignore  .ignore  CLAUDE.md  FINDINGS.md  README.md  data.py  eval_recall.py  hebbian.md  history_mem0_reset1.jsonl  history_mem1_reset0.jsonl  history_mem1_reset1.jsonl  model.py  model_conv.py  paper.aux  paper.md  paper.tex  pyproject.toml  sample.py  train.py  train_100M.md  train_100M.py  train_conv.py  train_conv_100M.py  train_stack100M.py
bench_fineweb/: CLOUD.md  model.py  train.py
checkpoints/: ckpt_code100M_deep_step1000.pt  ckpt_code100M_deep_step2000.pt  ckpt_code100M_deep_step3000.pt  ckpt_code100M_deep_step4000.pt  ckpt_code100M_deep_step5000.pt  ckpt_code100M_deep_step6000.pt  ckpt_code100M_deep_step7000.pt  ckpt_code_conv_step1000.pt  ckpt_code_conv_step500.pt  ckpt_code_deep_step1000.pt  ckpt_code_deep_step500.pt  ckpt_code_mem1_dual_step1000.pt  ckpt_code_mem1_dual_step500.pt  ckpt_code_mem1_step1000.pt  ckpt_code_mem1_step500.pt  ckpt_deep_step1000.pt  ckpt_deep_step500.pt  ckpt_mem1_step1000.pt  ckpt_mem1_step500.pt  ckpt_stack100M_conv_step2000.pt  ckpt_wide_step1000.pt  ckpt_wide_step500.pt  history_code100M_deep.jsonl  history_code_conv16.jsonl  history_code_conv2.jsonl  history_code_conv6.jsonl  history_code_conv8.jsonl  history_code_mem1.jsonl  history_code_mem1_dual.jsonl  history_code_transformer.jsonl  history_mem1_dual_smoke.jsonl  history_prose_transformer.jsonl  history_stack100M_conv.jsonl  model_code100M_deep.pt  model_code_conv.pt  model_code_mem1.pt  model_code_mem1_dual.pt  model_code_transformer.pt  model_deep.pt  (+7 more)
(+173 files in other folders)
